--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ colorama==0.4.6
 confection==0.1.5
 cryptography==46.0.3
 cymem==2.0.11
+dj-database-url==3.0.1
 Django==4.2
 django-cors-headers==4.9.0
 django-webpush==0.3.6
@@ -92,5 +93,6 @@ vine==5.1.0
 wasabi==1.1.3
 wcwidth==0.2.14
 weasel==0.4.2
+whitenoise==6.11.0
 wrapt==2.0.1
 yarl==1.22.0
